[Pale-Moon] Issue #1872 - Part 5: Align about:home background with other pages.

--- a/application/palemoon/components/abouthome/aboutHome.css
+++ b/application/palemoon/components/abouthome/aboutHome.css
@@ -7,7 +7,7 @@
 html {
   font: message-box;
   font-size: 100%;
-  background-color: #ececec;
+  background-color: rgb(229,229,229);
   color: #000;
   height: 100%;
 }
